[18.October 2008]
- viking.rb: docs RD -> RDoc
- gamestate.rb: Possibility to select viking/item also in other states than
  PlayingGameState
- Location#display_rect
- handling of clicks moved from GameState to Game
- new develmagic feature - in-game checking if a rect is free: click in the
  game screen and drom to define checked rect - or double-click a Sprite
  to check it's rect (includes new "monster" TestRect)
- Viking#descend_onto_ground modified because "map dirty thing problem" 
  has been solved (after cca four years of being ignored)
- freevikings.rb: develmagic accessible only in development version

[16.October 2008]
- StructuredWorld.rb, game.rb: removed argument 'password' 
  of StructuredWorld.new;
  StructuredWorld#next_level isn't first called from StructuredWorld#initialize
- story.rb: added message "press Esc to skip" to storyframes
- FreeVikings.valid_location_password -> Level.valid_level_password?

[13.October 2008]
- tests: removed TestTiledMapLoadStrategy and associated data, 'lib/' added
  to $:, errors in TestTalk fixed;
  test source files aren't listed in tests/test.rb, but found at the time 
  of execution (in the same way as in Test::Unit::AutoRunner)
- game.rb: progressbar shown while loading (uses Threads)

[6.October 2008]
- maploaderfactory.rb: XmlMap2LoadStrategy added
- locs/ArcticLevelSet/ArcticTutorial: start and exit position fixed
- maploaderfactory.rb, location.rb: changes due to "Map2 -> Map" name change
- viking.rb: constant Map::TILE_SIZE never more exists

[4.October 2008 - St Francis of Assisi]
- location.rb: supports background/foreground painting

[3.October 2008]
- locationloader.rb: docs RD->RDoc
- tiledmaploadstrategy.rb and xmlmaploadstrategy.rb moved to SchwerEngine
- maploaderfactory.rb: require of moved classes removed; docs RD->RDoc
- location.rb, maploaderfactory.rb, locationloader.rb: Map2 used instead of 
  Map

[2.October 2008]
- utils/make_release.rb: It wasn't possible to access CVS via SSH